--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,12 @@
-name: "Github mention to Slack"
-description: "Convert Github mention to Slack mention"
-inputs:
-  configuration-path:
-    description: "Mapping config for Github username to Slack member ID."
-    required: true
-    default: ".github/mention-to-slack.yml"
-  slack-webhook-url:
-    description: "Slack Incomming Webhook URL to notify."
-    required: true
-  repo-token:
-    description: "Github access token to fetch .github/mention-to-slack.yml file."
-    required: true
-  bot-name:
-    description: "Display name for this bot on Slack."
-    required: false
-  icon-url:
-    description: "Display icon url for this bot on Slack."
-    required: false
+name: "Github mention to Teams/Flow"
+description: "Convert Github mention to Teams/Flow endpoint"
+inputs:  
+  teams-webhook-url:
+    description: "Teams/Flow custom endpoint URL to notify."
+    required: true  
+  run-id:
+    description: "Run Id of the job, for error reporting"
+    required: false  
 runs:
   using: "node12"
   main: "dist/index.js"
