--- a/action.yml
+++ b/action.yml
@@ -11,5 +11,5 @@ runs:
   using: "node12"
   main: "dist/index.js"
 branding:
-  icon: "message-square"
-  color: "red"
+  icon: "bell"
+  color: "purple"
